--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="container">
 
         <h1>Dice roller</h1>
-        <label > # of dice</label>
+        <label ># of dice:</label>
         <input type="number" value="1" min="1" id="numOfDice">
         <button onclick="rollDice()">Roll dice</button>
         <div id="diceResult"></div>
@@ -24,13 +24,6 @@
 
     </div>
     
-
-
-
-
-
-
-
     <script src="index.js"></script>
 </body>
 </html>
